--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>TKM Trading Shop | Premium Sanitaryware & Kitchen Faucets Pakistan</title>
     <meta name="description" content="Shop luxury bathroom fittings, kitchen mixers, sinks, and accessories in Pakistan. TKM Trading offers imported sanitaryware, rain showers, and organizers with nationwide delivery." />
     <meta name="keywords" content="sanitaryware pakistan, kitchen faucets, bathroom accessories, TKM trading, luxury fittings, shower systems, sink organizers" />
+    <!-- Favicon: T character on branded background -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2032%2032'%3E%3Crect%20width='32'%20height='32'%20fill='%23008B9B'/%3E%3Ctext%20x='16'%20y='22'%20text-anchor='middle'%20font-size='20'%20fill='white'%20font-family='ABeeZee,sans-serif'%3ET%3C/text%3E%3C/svg%3E">
+    <!-- Social/link preview -->
+    <meta property="og:title" content="TKM Trading Shop | Premium Sanitaryware & Kitchen Faucets Pakistan" />
+    <meta property="og:description" content="Shop luxury bathroom fittings, kitchen mixers, sinks, and accessories in Pakistan. TKM Trading offers imported sanitaryware, rain showers, and organizers with nationwide delivery." />
+    <!-- <meta property="og:image" content="/tkm-share.png" /> -->
+    <meta property="og:type" content="website" />
+    <!-- <meta property="og:url" content="https://yourdomain.com/" /> -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="TKM Trading Shop | Premium Sanitaryware & Kitchen Faucets Pakistan" />
+    <meta name="twitter:description" content="Shop luxury bathroom fittings, kitchen mixers, sinks, and accessories in Pakistan. TKM Trading offers imported sanitaryware, rain showers, and organizers with nationwide delivery." />
+    <meta name="twitter:image" content="/tkm-share.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,22 +83,22 @@
         font-family: 'ABeeZee', sans-serif;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "shopify-buy": "https://esm.sh/shopify-buy@^3.0.7"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+        "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+        "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+        "react/": "https://esm.sh/react@^19.2.4/",
+        "react": "https://esm.sh/react@^19.2.4",
+        "shopify-buy": "https://esm.sh/shopify-buy@^3.0.7"
+      }
+    }
+    </script>
+    <link rel="stylesheet" href="/index.css">
+  </head>
   <body class="bg-white text-tkm-black antialiased selection:bg-tkm-teal selection:text-white font-sans">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
